[DOCS] Add note about per-request encryption options

--- a/docs/per-request-configuration.asciidoc
+++ b/docs/per-request-configuration.asciidoc
@@ -237,3 +237,26 @@ $results = $future->wait();       // resolve the future
 
 Future mode supports two options: `true` or `'lazy'`.  For more details about how asynchronous execution functions, and
 how to work with the results, see the dedicated page on link:_futures.html[Futures].
+
+=== SSL Encryption
+
+Normally, you will specify SSL configurations when you link:_security[create the client], since encryption typically
+applies to all requests. However, it is possible to configure on a per-request basis too if you need that functionality.
+For example, if you  need to use a self-signed cert on a specific request, you can specify it via the `verify` parameter
+in the client options:
+
+
+[source,php]
+----
+$client = ClientBuilder::create()->build();
+
+$params = [
+    'index' => 'test',
+    'type' => 'test',
+    'id' => 1,
+    'client' => [
+        'verify' => 'path/to/cacert.pem'      //Use a self-signed certificate
+    ]
+];
+$future = $client->get($params);
+----
