[DOCS] Add page on CRUD

--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -15,7 +15,7 @@ include::php_json_objects.asciidoc[]
 
 include::index-operations.asciidoc[]
 
-include::indexing-operations.asciidoc[]
+include::crud.asciidoc[]
 
 include::search-operations.asciidoc[]
 
