[DOCS] Add Breaking changes doc

--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -66,7 +66,7 @@ $client = ClientBuilder::create()
                     ->build();
 ----
 
-
+[[enabling_logger]]
 === Enabling the Logger
 Elasticsearch-PHP supports logging, but it is not enabled by default for performance reasons.  If you wish to enable logging,
 you need to select a logging implementation, install it, then enable the logger in the Client.  The recommended logger
