--- a/docs/selectors.asciidoc
+++ b/docs/selectors.asciidoc
@@ -37,6 +37,10 @@ better to "stick" to a single connection for the duration of the script.
 By default, this selector will randomize the hosts upon initialization, which will still guarantee an even distribution
 of load across the cluster.  It changes the round-robin dynamics from per-request to per-script.
 
+If you are using <<_future_mode>>, the "sticky" behavior of this selector will be non-ideal, since all parallel requests
+will go to the same node instead of multiple nodes in your cluster.  When using future mode, the default `RoundRobinSelector`
+should be preferred.
+
 If you wish to use this selector, you may do so with:
 
 [source,php]
