--- a/docs/crud.asciidoc
+++ b/docs/crud.asciidoc
@@ -98,8 +98,8 @@ $params = [];
 for ($i = 0; $i <= 100000; $i++) {
     $params['body'][] = array(
         'index' => array(
-            'index' => 'my_index',
-            'type' => 'my_type',
+            '_index' => 'my_index',
+            '_type' => 'my_type',
             '_id' => $i
         )
     );
