--- a/docs/crud.asciidoc
+++ b/docs/crud.asciidoc
@@ -73,8 +73,9 @@ A simple example might look like this:
 ----
 for($i = 0; $i < 100; $i++) {
     $params['body'][] = array(
-        'index' => 'my_index',
-                    'type' => 'my_type',
+        '_index' => 'my_index',
+        '_type' => 'my_type',
+        '_id' => $i,
     );
 
     $params['body'][] = [
