[Docs] Add community integration page

--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -34,3 +34,5 @@ include::serializers.asciidoc[]
 include::php-version-requirement.asciidoc[]
 
 include::breaking-changes.asciidoc[]
+
+include::community.asciidoc[]
